--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.1.1",
+    "history": "^4.7.2",
+    "jquery": "3.3.1",
+    "prop-types": "15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-toastify": "4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
